Sidebar z-index issue solved

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -62,7 +62,6 @@ p-sidebar .p-sidebar-right {
     border-right: none;
     border-left: 5px solid #f4f4f4;
     position: relative;
-    z-index: 500;
 }
 
 .p-card {
